--- a/less/home-page.less
+++ b/less/home-page.less
@@ -9,8 +9,12 @@
       height: auto;
     }
 
-    h2 {
-      margin-top: 20px;
+    .dropzone {
+      width: 350px;
+      height: 60px;
+      border: 1px solid black;
+      margin-bottom: 10px;
+      padding: 10px;
     }
   }
 
@@ -24,7 +28,6 @@
     
     .text-content {
       width: 48%;
-      padding-right: 1%;
 
       @media @mobile {
         width: 100%;
